fix: overflow on firefox

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -42,12 +42,14 @@ canvas {
 	padding: 0;
 	display: block;
 	cursor: none;
+	.full();
 }
 
 body {
 	margin: 0;
 	padding: 0;
 	background-color: black;
+	overflow: none;
 }
 
 h3 {
